Closed Bug 1510622 Opened 6 years ago Closed 5 years ago

Crash in mozilla::gfx::VRThread::Start

Categories

(Core :: WebVR, defect, P2)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- wontfix
firefox63 --- unaffected
firefox64 --- unaffected
firefox65 --- wontfix
firefox66 --- wontfix
firefox68 --- wontfix
firefox69 --- wontfix
firefox70 --- fixed
firefox71 --- fixed

People

(Reporter: marcia, Assigned: kip)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is
report bp-3f6316a2-8e2c-4497-88f2-a49490181128.
=============================================================

Seen while looking at nightly crash stats - 2 crash so far on 10.14 Mac: https://bit.ly/2BDV3ag

URLs: 
* https://sketchfab.com/models/16ec8610299f4d509df687143c016837 
* http://www.strangerthingscountdown.com/ 

Top 10 frames of crashing thread:

0 XUL mozilla::gfx::VRThread::Start xpcom/base/nsCOMPtr.h:933
1 XUL mozilla::detail::RunnableFunction<mozilla::gfx::OpenVRSession::Initialize gfx/vr/service/OpenVRSession.cpp:936
2 XUL nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1244
3 XUL NS_ProcessPendingEvents xpcom/threads/nsThreadUtils.cpp:472
4 XUL nsBaseAppShell::NativeEventCallback widget/nsBaseAppShell.cpp:99
5 XUL nsAppShell::ProcessGeckoEvents widget/cocoa/nsAppShell.mm:463
6 CoreFoundation CoreFoundation@0x58154 
7 CoreFoundation CoreFoundation@0x580fa 
8 CoreFoundation CoreFoundation@0x3bb94 
9 CoreFoundation CoreFoundation@0x3b13d 

=============================================================
No recent crashes .... will 65 be affected by this when it goes to release?
Flags: needinfo?(kgilbert)

This is possibly already fixed, but need to confirm.

Flags: needinfo?(kgilbert)
Priority: -- → P2

Last crashes appear to have been in May. Closing this out as WFM since if it was fixed, it isn't clear what fixed it.

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → WORKSFORME

Reopening, since there is a lone crash on 10.14 in the 7-20 build.

Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---

Kip: Since we still have one crash, it doesn't appear that this was fixed. Is this worth keeping open for investigation?

Flags: needinfo?(kgilbert)

I would assume it is likely we create this VR thread and dispatch it by the main thread [1], and our OpenVR session or the VR service is shutdown accidentally. It is very possibly caused by SteamVR because it is very unstable on Mac OS. But, this VR thread is still flying in the main thread.

I will suggest to give an easy fix to just make OpenVRSession::StartHapticThread be started at the first time calling the haptic vibration.

[1] https://searchfox.org/mozilla-central/rev/40e889be8ff926e32f7567957f4c316f14f6fbef/gfx/vr/service/OpenVRSession.cpp#317

Thanks for the investigation @daosheng! I'll give it a try.

Assignee: nobody → kgilbert
Flags: needinfo?(kgilbert)

This is so low volume that I'm going to remove it from weekly regression triage.

Pushed by dmu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8a562d19cb5f
Initilize OpenVR controller haptic thread when the first time to do vibration. r=kip
Status: REOPENED → RESOLVED
Closed: 5 years ago5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71

Is this something we should nominate for Beta uplift?

Let me do this uplift request when kip is on PTO.

Flags: needinfo?(kgilbert) → needinfo?(dmu)

Comment on attachment 9093442 [details]
Bug 1510622 - Initilize OpenVR controller haptic thread when the first time to do vibration.

Beta/Release Uplift Approval Request

  • User impact if declined: The crashes of Bug 1510622 will continue to happen.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): We just make the thread launch time be later after OpenVR session is stable.
  • String changes made/needed:
Flags: needinfo?(dmu)
Attachment #9093442 - Flags: approval-mozilla-beta?

Comment on attachment 9093442 [details]
Bug 1510622 - Initilize OpenVR controller haptic thread when the first time to do vibration.

Fix for WebVR crash, let's take it for beta 11.

Attachment #9093442 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: