Bug 1510622 - Initilize OpenVR controller haptic thread when the first time to do vibration. a=lizzard

Reviewers: kip

Reviewed By: kip

Bug #: 1510622

Differential Revision: https://phabricator.services.mozilla.com/D46227